Update [0.3.9] - Fixed: CSS overflow-y: scroll doesn't work in Firefox
Fixed
- CSS overflow-y issue in Firefox: add min-height: 0% in parent element

--- a/docs/css/extended.css
+++ b/docs/css/extended.css
@@ -47,6 +47,7 @@ button, .button { font-family: 'Exo', sans-serif; }
 .main-box {
     flex: 1;
     display: flex;
+    min-height: 0%;
     flex-flow: row wrap;
 }
 
